# multicellular

./: .gitignore  .pre-commit-config.yaml  README.md  __init__.py  pytest.ini  setup.cfg  setup.py
core/: cell.py  reactions.py  simulation.py
examples/: dupOri_cutter.ipynb  feature_tour.ipynb  mother_machine_demo.ipynb  quorum_sensing_demo.ipynb  ratkowsky_temperature_demo.ipynb  repressilator_demo.ipynb  toggle_switch_demo.ipynb
examples/outputs/: dupOri_cutter.pkl  mother_machine_demo.pkl  plac_gfp_simulation.pkl  quorum_sensing_ode.pkl  repressilator_video.pkl
multicellular.egg-info/: PKG-INFO  SOURCES.txt
src/multicellular/: __init__.py
src/multicellular/core/: __init__.py  cell.py  colony.py  environment.py  reactions.py  simulation.py
src/multicellular/utils/: __init__.py  parallel.py  visualization.py
tests/: test_cell.py  test_colony.py  test_dummy.py  test_environment.py  test_parallel.py  test_reaction_diffusion.py  test_reactions.py  test_simulation.py  test_visualization.py
utils/: __init__.py  sbml_parser.py
