[flake8]
ignore = E501
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.venv

[isort]
profile = black
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = .venv,__pycache__

[tool:pytest]
addopts = -ra -q

[coverage:run]
branch = True
source = .

[coverage:report]
show_missing = True
skip_covered = True

[metadata]
license_file = LICENSE
